--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -1,7 +1,5 @@
-#
-# WARNING: it is CRITICAL that this file & directory are NOT accessible directly via a web browser!
-# http://nette.org/security-warning
-#
+includes:
+	- mailer.neon
 parameters:
 
 
