--- a/.htaccess
+++ b/.htaccess
@@ -9,8 +9,8 @@ RewriteRule ^(.*)$ http://www.%{HTTP_HOST}/$1 [R=301,L]
 #RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
 #RewriteRule ^(.*)$ http://%1/$1 [R=301,L]
 #
-RewriteCond %{HTTP_HOST} ^.+\..+
-RewriteRule (.*) /www/$1 [L,QSA]
+#RewriteCond %{HTTP_HOST} ^.+\..+
+#RewriteRule (.*) /www/$1 [L,QSA]
 #
 #RewriteCond %{HTTP_HOST} ^(.*)\..+\..+
 #RewriteRule (.*) /www/$1 [L,QSA]
